@@ -294,13 +294,13 @@ void ProcessLEDReport(uint8_t LEDReport)
 {
 	uint8_t LEDMask = LEDS_LED2;
 	
-	if (LEDReport & 0x01) // NUM Lock
+	if (*LEDReport & KEYBOARD_LED_NUMLOCK)
 	  LEDMask |= LEDS_LED1;
 	
-	if (LEDReport & 0x02) // CAPS Lock
+	if (*LEDReport & KEYBOARD_LED_CAPSLOCK)
 	  LEDMask |= LEDS_LED3;
 
-	if (LEDReport & 0x04) // SCROLL Lock
+	if (*LEDReport & KEYBOARD_LED_SCROLLLOCK)
 	  LEDMask |= LEDS_LED4;
 
 	/* Set the status LEDs to the current Keyboard LED status */
