@@ -184,13 +184,13 @@ void EVENT_USB_Device_UnhandledControlRequest(void)
 				uint8_t LEDStatus = Endpoint_Read_Byte();
 				uint8_t LEDMask   = LEDS_LED2;
 				
-				if (LEDStatus & 0x01) // NUM Lock
+				if (LEDStatus & KEYBOARD_LED_NUMLOCK)
 				  LEDMask |= LEDS_LED1;
 				
-				if (LEDStatus & 0x02) // CAPS Lock
+				if (LEDStatus & KEYBOARD_LED_CAPSLOCK)
 				  LEDMask |= LEDS_LED3;
 
-				if (LEDStatus & 0x04) // SCROLL Lock
+				if (LEDStatus & KEYBOARD_LED_SCROLLLOCK)
 				  LEDMask |= LEDS_LED4;
 
 				/* Set the status LEDs to the current HID LED status */
@@ -264,13 +264,13 @@ void Keyboard_HID_Task(void)
 		uint8_t LEDStatus = Endpoint_Read_Byte();
 		uint8_t LEDMask   = LEDS_LED2;
 		
-		if (LEDStatus & 0x01) // NUM Lock
+		if (LEDStatus & KEYBOARD_LED_NUMLOCK)
 		  LEDMask |= LEDS_LED1;
 		
-		if (LEDStatus & 0x02) // CAPS Lock
+		if (LEDStatus & KEYBOARD_LED_CAPSLOCK)
 		  LEDMask |= LEDS_LED3;
 
-		if (LEDStatus & 0x04) // SCROLL Lock
+		if (LEDStatus & KEYBOARD_LED_SCROLLLOCK)
 		  LEDMask |= LEDS_LED4;
 
 		/* Set the status LEDs to the current Keyboard LED status */
