@@ -109,6 +109,18 @@
 
 		/** Constant for a keyboard report modifier byte, indicating that the keyboard's right GUI key is currently pressed. */
 		#define HID_KEYBOARD_MODIFER_RIGHTGUI   (1 << 7)
+		
+		/** Constant for a keyboard output report LED byte, indicating that the host's NUM LOCK mode is currently set. */
+		#define HID_KEYBOARD_LED_NUMLOCK        (1 << 0)
+		
+		/** Constant for a keyboard output report LED byte, indicating that the host's CAPS LOCK mode is currently set. */
+		#define HID_KEYBOARD_LED_CAPSLOCK       (1 << 1)
+
+		/** Constant for a keyboard output report LED byte, indicating that the host's SCROLL LOCK mode is currently set. */
+		#define HID_KEYBOARD_LED_SCROLLLOCK     (1 << 2)
+
+		/** Constant for a keyboard output report LED byte, indicating that the host's KATANA mode is currently set. */
+		#define HID_KEYBOARD_LED_KATANA         (1 << 3)
 
 	/* Type Defines: */
 		/** Enum for the different types of HID reports. */
